# QFCL

WinNTL-5_5_2-CMake/: CMakeLists.txt
WinNTL-5_5_2-CMake/tests/: CMakeLists.txt
qfcl_0_4/: CMakeLists.txt  README.txt
qfcl_0_4/qfcl/: defines.hpp
qfcl_0_4/qfcl/math/bits/: copy_bits.hpp
qfcl_0_4/qfcl/mc1/: FDMVisitor.hpp  FDMVisitor_named.hpp
qfcl_0_4/qfcl/miscellaneous/: strings.hpp
qfcl_0_4/qfcl/random/distribution/: QuantLib_normal_box_muller_polar.hpp  QuantLib_variate_generator_adaptor.hpp  boost_normal_distribution.hpp  boost_normal_quantile.hpp  boost_normal_ziggurat.hpp  boost_uniform_01.hpp  distributions.hpp  normal_QuantLib_box_muller.hpp  normal_QuantLib_box_muller_polar.hpp  normal_boost_quantile.hpp  normal_box_muller.hpp  normal_box_muller_polar.hpp  normal_inversion.hpp  normal_quantile.hpp  normal_ziggurat.hpp  qfcl_distribution_adaptor.hpp  uniform_0ex_1ex.hpp  uniform_0in_1ex.hpp  uniform_0in_1in.hpp
qfcl_0_4/qfcl/random/distribution/QuantLib/: boxmullergaussianrng.hpp
qfcl_0_4/qfcl/random/distribution/boost-trunk/: normal_distribution.hpp
qfcl_0_4/qfcl/random/engine/: boost_engines.hpp  boost_mt19937.hpp  linear_generator.hpp  mersenne_twister.hpp  numberline.hpp  qfcl_engine_adapter.hpp  quantlib_mt19937.hpp  reverse_adapter.hpp  standards_adapter.hpp  std_mt19937.hpp
qfcl_0_4/qfcl/random/engine/detail/: strings.hpp
qfcl_0_4/qfcl/random/generator/: QuantLib_BoxMullerGaussianRng.hpp  QuantLib_ZigguratRng.hpp  QuantLib_from_standard_variate_generator_adaptor.hpp  QuantLib_to_standard_variate_generator_adaptor.hpp  QuantLib_variate_generator_distribution_adaptor.hpp  qfcl_variate_generator_adaptor.hpp  variate_generator.hpp
qfcl_0_4/qfcl/random/generator/QuantLib/: boxmullergaussianrng.hpp
qfcl_0_4/qfcl/utility/: comma_separated_number.hpp  for_each.hpp  named_adapter.hpp  named_adaptor.hpp  names.hpp  standard.hpp  tmp.hpp  type_selection.hpp  type_traits.hpp
qfcl_0_4/test/: CMakeLists.txt  TestU01_BigCrush.cpp  distribution_common.hpp  distribution_common.ipp  engine_common.ipp  engine_profiler.cpp  engine_speed.cpp  engine_speed_hard_coded.cpp  normal_univariate_speed.cpp  univariate_distribution_speed.cpp  univariate_distribution_speed_hard_coded.cpp  univariate_generation_speed.cpp  univariate_generation_speed_hard_coded.cpp  univariate_generator_speed.cpp  univariate_generator_speed_hard_coded.cpp
qfcl_0_4/test/EngineSpeedHardCoded/: EngineSpeedHardCoded.vcxproj  EngineSpeedHardCoded.vcxproj.filters
qfcl_0_4/test/EngineSpeedHardCoded/Release/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
qfcl_0_4/test/NormalUnivariateSpeed/: NormalUnivariateSpeed.vcxproj  NormalUnivariateSpeed.vcxproj.filters
qfcl_0_4/test/NormalUnivariateSpeed/Release/: NormalUnivariateSpeed.lastbuildstate
qfcl_0_4/test/UnivariateGenerationSpeedHardCoded/: UnivariateGenerationSpeedHardCoded.vcxproj  UnivariateGenerationSpeedHardCoded.vcxproj.filters
qfcl_0_4/test/UnivariateGenerationSpeedHardCoded/Debug/: CL.read.1.tlog  CL.write.1.tlog  UnivariateGenerationSpeedHardCoded.lastbuildstate  cl.command.1.tlog  vc110.idb
